--- a/CRUDApp/appsettings.json
+++ b/CRUDApp/appsettings.json
@@ -2,7 +2,8 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "CRUDApp.Middleware.CustomMiddleware": "Information"
     }
   },
   "AllowedHosts": "*",
